# notification-client

./: pyproject.toml
notification_client/: main.py
